# egeria-workspaces

./: .env  .env.example  .gitignore  .mailmap  AGENTS.md  BACKLOG.md  CATALOG_ISSUES.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Configuring and Using the Call Dr. Egeria Obsidian Plugin.md  Configuring and Using the Calling Dr. Egeria Obsidian Plug-in.md  EgeriaExplorer-NextPhase.md  HANDOFF_egeria_workspaces_my_egeria.md  Lineage Explorer.md  Monitoring Podman with PyCharm.md  PYEGERIA_ISSUES.md  README.md  SECURITY.md  Using MCP in Egeria-Workspaces.md  audit_plan.md  build.gradle  cat_calls.md  component-feature-matrix.md  feedback-analyst-guide.md  fresh-start-local  fresh-start-multi-host  generate-certs.sh  operations_plan.md  pyproject.toml  quick-start-local  quick-start-multi-host  quickstart-demo-items.md  redeploy-demo  refresh-local  shared-ui-audit.md  technical_data_catalog_spec.md  type-system-audit.md
.githooks/: commit-msg
.github/: release-template.md
coco-workbooks/: README.md  junk.md
compose-configs/: ENVIRONMENT_DIVERGENCE.md  README.md
egeria-platform-jupyter-compose/: Dockerfile-jupyter  README.md  egeria-platform-jupyter-compose.yaml  z-egeria-platform-jupyter-compose.yaml
egeria-platform-postgres-compose/: egeria-platform-postgres.yaml
exchange/: ExtRef - EMEP-EEA air pollutant emission inventory guidebook 2023.md  ML-OPS Context Diagram.canvas  README.md  index.html  (+2 more)
exchange-freshstart/: README.md
exchange-quickstart/: 2026-02-13.md  MCP.canvas  Open Telemetry - Open Inference - Open Lineage.md  Output PIpeline.md  README.md  Untitled.canvas  claude_desktop_config.json.md
(+2616 files in other folders)
