[tool.poetry]
name = "egeria-workspaces"
version = "5.3"
description = ""
authors = ["Dan Wolfson <dwolfson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.3,<4.0"
jupyter = "*"
rich = "*"
pyegeria = "*"
unitycatalog = "*"
textual = "*"
apache-airflow = "*"
apache-airflow-providers-postgres = "*"
dash = "==2.18.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
