[tool.poetry]
name = "egeria-workspaces"
version = "5.3"
description = ""
authors = ["Dan Wolfson <dwolfson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.3,<4.0"
jupyter = "*"
rich = "*"
pyegeria = ">=5.4.0.31"
unitycatalog = "*"
textual = "*"
apache-airflow = "*"
apache-airflow-providers-postgres = "*"
dash = "==2.18.2"
matplotlib = "==3.10.0"
requests = "^2.32.4"
pandas = "^2.2.3"
jupyter-notebook-parser = "^0.1.4"
marko = "^2.1.2"
fastapi = "^0.116.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
